--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -25,7 +25,7 @@ jobs:
       run: go build -v ./...
 
     - name: Test
-      run: go test -json -v ./... > TestResults.json
+      run: go test -json -short -v ./... > TestResults.json
 
     - name: Upload
       uses: actions/upload-artifact@v3
